--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,5 @@
 {
 	"image": "mcr.microsoft.com/devcontainers/universal:2",
-	// An empty postCreate Prevents 'oryx' from running (as is the default with the universal image)
 	"postCreateCommand": "",
 	"hostRequirements": {
 		"storage": "128gb",
@@ -15,7 +14,6 @@
 	"features": {
 		"ghcr.io/devcontainers/features/powershell:1": {},
 		"ghcr.io/devcontainers/features/azure-cli:1": {},
-		"ghcr.io/devcontainers/features/rust:1": {},
-		"./features/remove-outdated-apt-list": {}
+		"ghcr.io/devcontainers/features/rust:1": {}
 	}
 }
